--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
-    "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.2.2"
