--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.3",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
